made propel work on entities

--- a/CodeMageMeteor/codemage/client/codeMage.html
+++ b/CodeMageMeteor/codemage/client/codeMage.html
@@ -3,7 +3,7 @@
     <div class="row">
         {{#with user}}
             <h1>You're a Wizard, {{username}}.</h1>
-            <h4>Minecraft Id:<a href="#" class="minecraft-id-input">{{minecraftPlayerId}}</a></h4>
+            <h4>Minecraft Id:<a href="#" class="minecraft-id-input">MyId: {{minecraftPlayerId}}</a></h4>
         {{/with}}
     </div>
     <div class="small-4 medium-3 large-2 columns">
