--- a/CodeMageMeteor/codemage/client/spell.html
+++ b/CodeMageMeteor/codemage/client/spell.html
@@ -22,7 +22,7 @@
     <a href="#" style="color:green" class="spellStatus spellStatus-{{status}}"><b>{{status}}</b></a>
     {{#if errorMessage}}
         <a title="{{errorMessage}}" style="color:red">
-            {{errorOnly}} at line {{line}}{{highlightedLine}}
+            {{errorOnly}} at line {{line}}
         </a>
     {{/if}}
 </template>
