--- a/CodeMageMeteor/codemage/client/spell.html
+++ b/CodeMageMeteor/codemage/client/spell.html
@@ -9,13 +9,32 @@
             <h5><a href="#" style="{{#if preprocess}}color:red{{/if}}" class="togglePreprocess">Preprocess</a></h5>
 
             <h5><a href="#" style="color:red" class="remove-spell">Delete</a></h5>
-            {{#each enchantmentsForSpell}}
-                {{#if isSpellAssignedToEnchantment ..}}
-                    <a class="removeSpellFromEnchantment" style="background-color:lightblue">{{name}}</a>
-                {{else}}
-                    <a class="addSpellToEnchantment">{{name}}</a>
-                {{/if}}
-            {{/each}}
+            <select>
+                {{#each itemMaterials}}
+                    {{#if isCurrentItemMaterial .. this}}
+                        <option class="itemMaterialSelector" value="{{this}}" selected>{{this}}</option>
+                    {{else}}
+                        <option class="actionSelector" value="{{this}}">{{this}}</option>
+                    {{/if}}
+                {{/each}}
+            </select>
+            <select>
+                {{#each actions}}
+                    {{#if isCurrentAction ..}}
+                        <option value="{{this}}" selected>{{this}}</option>
+                    {{else}}
+                        <option value="{{this}}">{{this}}</option>
+                    {{/if}}
+                {{/each}}
+            </select>
+            <!--{#each enchantmentsForSpell}}
+                {#if isSpellAssignedToEnchantment ..}}
+                    <a class="removeSpellFromEnchantment" style="background-color:lightblue">{name}}</a>
+                {else}}
+                    <a class="addSpellToEnchantment">{name}}</a>
+                {/if}}
+            {/each}}-->
+
         </div>
     </div>
 
