--- a/CodeMageMeteor/codemage/client/spell.html
+++ b/CodeMageMeteor/codemage/client/spell.html
@@ -7,6 +7,7 @@
 
         <div class="small-4 medium-3 large-2 columns">
             <h5><a href="#" style="{{#if preprocess}}color:red{{/if}}" class="togglePreprocess">Preprocess</a></h5>
+            <h5><a href="#" style="{{#if library}}color:red{{/if}}" class="toggleLibrary">Library</a></h5>
 
             <h5><a href="#" style="color:red" class="remove-spell">Delete</a></h5>
             <select class="itemMaterialSelector">
