--- a/CodeMageMeteor/codemage/client/spell.html
+++ b/CodeMageMeteor/codemage/client/spell.html
@@ -6,7 +6,7 @@
         </div>
 
         <div class="small-4 medium-3 large-2 columns">
-            <h5><a href="#" style="{{#if preprocess}}color:red{{/if}}" class="togglePreprocess">Preprocess</a></h5>
+            <h5><a href="#" style="{{#if wrapper}}color:red{{/if}}" class="toggleGameWrapper">GameWrapper</a></h5>
             <h5><a href="#" style="{{#if library}}color:red{{/if}}" class="toggleLibrary">Library</a></h5>
 
             <h5><a href="#" style="color:red" class="remove-spell">Delete</a></h5>
@@ -36,5 +36,10 @@
         <a title="{{errorMessage}}" style="color:red">
             {{errorOnly}}{{lineNumber}}
         </a>
+    {{/if}}
+    {{#if wrapper}}
+        Enabled: <input type="checkbox" class="wrapperEnabled" {{isChecked}}>
+        Description: <input type="text" class="wrapperDesc" value="{{wrapperDescription}}">
+        Priority: <input type="number" class="wrapperPriority" value="{{wrapperPriority}}">
     {{/if}}
 </template>
