--- a/CodeMageMeteor/codemage/client/spell.html
+++ b/CodeMageMeteor/codemage/client/spell.html
@@ -33,12 +33,14 @@
 
     <a href="#" style="color:green" class="spellStatus spellStatus-{{status}}"><b>{{status}}</b></a>
     {{#if errorMessage}}
+        <br>
         <a title="{{errorMessage}}" style="color:red">
             {{errorOnly}}{{lineNumber}}
         </a>
     {{/if}}
     {{#if wrapper}}
-        Enabled: <input type="checkbox" class="wrapperEnabled" {{isChecked}}>
+        <br>
+        Enabled: <input type="checkbox" class="wrapperEnabled" {{isChecked}}><br>
         Description: <input type="text" class="wrapperDesc" value="{{wrapperDescription}}">
         Priority: <input type="number" class="wrapperPriority" value="{{wrapperPriority}}">
     {{/if}}
