--- a/CodeMageMeteor/codemage/client/spell.html
+++ b/CodeMageMeteor/codemage/client/spell.html
@@ -1,7 +1,8 @@
 <template name="spell">
     <div class="row">
         <div class="small-8 medium-9 large-10 columns">
-            <h3><a href="#" class="spell-name">{{name}}</a></h3>
+            <h3><a href="#" class="spell-name">{{name}}</a></h3><br>
+            {{gameWrapperText}}
             {{>aceEditor}}
         </div>
 
