made it stop thinking that all users were grouped as long as one was

--- a/CodeMageMeteor/codemage/client/group.html
+++ b/CodeMageMeteor/codemage/client/group.html
@@ -12,11 +12,11 @@
         </select><a href="#" class="add-wrapper">+</a><br>
         Group Members:<br>
         {{#each groupMembers}}
-            {{#if isUngrouped this}}{{userNameFromId this}}   <a href="#" class="remove-member {{this}}" style="color:red">-</a><br>{{/if}}
+            {{userNameFromId this}}   <a href="#" class="remove-member {{this}}" style="color:red">-</a><br>
         {{/each}}
         <select class="member-dropdown">
             {{#each allUsers}}
-                <option value="{{_id}}">{{username}}</option>
+                {{#if isUngrouped _id}} <option value="{{_id}}">{{username}}</option>{{/if}}
             {{/each}}
         </select><a href="#" class="add-member">+</a><br>
     </div>
