added a button to remove groups

--- a/CodeMageMeteor/codemage/client/group.html
+++ b/CodeMageMeteor/codemage/client/group.html
@@ -1,5 +1,6 @@
 <template name="group">
     <div class="small-8 medium-9 large-10 columns">
+        <a class="remove-group expand" style="color:red;float:right">Delete Group</a>
         <h3><a href="#" class="group-name">{{name}}</a></h3><br>
         Game Wrappers:<br>
         {{#each wrappers}}
